--- a/collecor/src/main/resources/application-test.properties
+++ b/collecor/src/main/resources/application-test.properties
@@ -1,13 +1,6 @@
-# DATASOURCE
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
-# H2 CLIENT
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-# JPA, SQL
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.defer-datasource-initialization=true
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/collectordb
+spring.datasource.username=root
+spring.datasource.password=12345
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
