store page loading products

--- a/collecor/pom.xml
+++ b/collecor/pom.xml
@@ -8,6 +8,7 @@
 		<version>3.1.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+	
 	<groupId>com.tcc</groupId>
 	<artifactId>collecor</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -44,9 +45,9 @@
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.33</version>
 		</dependency>
 		<!--
 		<dependency>
