--- a/collecor/src/main/resources/application-test.properties
+++ b/collecor/src/main/resources/application-test.properties
@@ -1,4 +1,4 @@
-sprispring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/collectordb
 spring.datasource.username=root
 spring.datasource.password=12345
