Download function - upload content updated

--- a/collecor/src/main/resources/application.properties
+++ b/collecor/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.profiles.active=test
 spring.jpa.open-in-view=true
 spring.thymeleaf.enabled=true
+
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
