type image, adjust biblioteca

--- a/collecor/src/main/resources/application.properties
+++ b/collecor/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.profiles.active=test
 spring.jpa.open-in-view=true
 spring.thymeleaf.enabled=true
 
-spring.servlet.multipart.max-file-size=50MB
-spring.servlet.multipart.max-request-size=50MB
+spring.servlet.multipart.max-file-size=1GB
+spring.servlet.multipart.max-request-size=1GB
