--- a/collecor/src/main/resources/application-test.properties
+++ b/collecor/src/main/resources/application-test.properties
@@ -1,5 +1,5 @@
 # DATASOURCE
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/VisualV
 spring.datasource.username=root
 spring.datasource.password=
