fixed bugs and adjustments

--- a/collecor/src/main/resources/application.properties
+++ b/collecor/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.thymeleaf.enabled=true
 
 spring.servlet.multipart.max-file-size=1GB
 spring.servlet.multipart.max-request-size=1GB
+
+server.error.whitelabel.enabled=false
